--- a/DockerfileRender
+++ b/DockerfileRender
@@ -13,4 +13,4 @@ FROM openjdk:17-jdk-slim
 COPY --from=build /target/ejercicio-1.0-SNAPSHOT-jar-with-dependencies.jar appTPDDS.jar
 # ENV PORT=8080
 EXPOSE 8080
-CMD ["java","-classpath","appTPDDS.jar.jar","server.App"]
+CMD ["java","-classpath","appTPDDS.jar","server.App"]
